# gtest_cmake_example

./: CMakeLists.txt  Jenkinsfile  README.md
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  main.cpp  multiply.cpp  multiply.hpp
tests/: CMakeLists.txt  multiply_test.cpp
